# The VERSION here is a placeholder; the real version is in the VERSION file.
set(VERSION 28.0.0)

if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/VERSION")
    file(STRINGS "VERSION" LINES)
    list(GET LINES 0 VERSION)
endif()

# Crude Semver parsing
if("${VERSION}" MATCHES "^([^\\.]+)\\.([^\\.]+)\\.([^\\.]+)$")
    set(VER_MAJOR ${CMAKE_MATCH_1})
    set(VER_MINOR ${CMAKE_MATCH_2})
    set(VER_PATCH ${CMAKE_MATCH_3})
else()
    message(FATAL_ERROR "unable to parse version: ${VERSION}")
endif()

cmake_minimum_required(VERSION 3.12 FATAL_ERROR)
project(cucumber_messages VERSION ${VERSION} LANGUAGES CXX)

# Required so CMake can find the custom package/config helper modules in ./cmake.
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")

# Standalone check
if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
    set(cucumber_messages_MAIN_PROJECT ON)
else()
    set(cucumber_messages_MAIN_PROJECT OFF)
endif()

# Options
if (POLICY CMP0077)
    # Allow CMake 3.13+ to override options when using FetchContent / add_subdirectory.
    cmake_policy(SET CMP0077 NEW)
endif ()

option(CUCUMBER_MESSAGES_BUILD_TESTS "Build the unit tests." Off)
option(CUCUMBER_MESSAGES_FETCH_DEPS "Fetch dependencies via FetchContent." ${cucumber_messages_MAIN_PROJECT})

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Compiler cache
find_program(CCACHE_PROGRAM ccache)
if(CCACHE_PROGRAM)
    set(CMAKE_CXX_COMPILER_LAUNCHER "${CCACHE_PROGRAM}")
    message(STATUS "Using ccache: ${CCACHE_PROGRAM}")
else()
    find_program(SCCACHE_PROGRAM sccache)
    if(SCCACHE_PROGRAM)
        set(CMAKE_CXX_COMPILER_LAUNCHER "${SCCACHE_PROGRAM}")
        message(STATUS "Using sccache: ${SCCACHE_PROGRAM}")
    endif()
endif()

# Configuration
include(GNUInstallDirs)

if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    add_compile_definitions(_CRT_SECURE_NO_WARNINGS _SCL_SECURE_NO_WARNINGS)
endif()

# CMake dependencies
include(dependencies.cpm)

# Target
set(CUCUMBER_MESSAGES_LIB_INC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
set(CUCUMBER_MESSAGES_LIB_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}")

# Globbing all source and header files because they are generated by the build system and we don't want to maintain a list of them.
file(GLOB_RECURSE CUCUMBER_MESSAGES_HEADERS "${CUCUMBER_MESSAGES_LIB_INC_DIR}/*.[ch]pp")
list(APPEND CUCUMBER_MESSAGES_LIB_ALL_SOURCES ${CUCUMBER_MESSAGES_HEADERS})

file(GLOB_RECURSE CUCUMBER_MESSAGES_LIB_SOURCES "${CUCUMBER_MESSAGES_LIB_SRC_DIR}/src/*.[ch]pp")
list(APPEND CUCUMBER_MESSAGES_LIB_ALL_SOURCES ${CUCUMBER_MESSAGES_LIB_SOURCES})

add_library(cucumber_messages_lib)
add_library(cucumber::messages ALIAS cucumber_messages_lib)

target_sources(
    cucumber_messages_lib
    PRIVATE
        ${CUCUMBER_MESSAGES_LIB_ALL_SOURCES}
)

target_include_directories(
    cucumber_messages_lib
    PUBLIC
        $<BUILD_INTERFACE:${CUCUMBER_MESSAGES_LIB_INC_DIR}/generated>
        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/cucumber>
    PRIVATE
        ${CUCUMBER_MESSAGES_LIB_SRC_DIR}/src/messages
)

target_link_libraries(
    cucumber_messages_lib
    PUBLIC
        nlohmann_json::nlohmann_json
)

set_target_properties(
    cucumber_messages_lib
    PROPERTIES
        VERSION ${VERSION}
        SOVERSION ${VER_MAJOR}
        EXPORT_NAME messages
        OUTPUT_NAME cucumber_messages
)

# Installation support
include(CMakePackageConfigHelpers)

configure_package_config_file(
  "cmake/cucumber_messages-config.cmake.in"
  "${PROJECT_BINARY_DIR}/cucumber_messages-config.cmake"
  INSTALL_DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/cucumber_messages"
  PATH_VARS CMAKE_INSTALL_INCLUDEDIR CMAKE_INSTALL_LIBDIR
)

write_basic_package_version_file(
  "${PROJECT_BINARY_DIR}/cucumber_messages-config-version.cmake"
  COMPATIBILITY AnyNewerVersion
)

install(
    TARGETS
        cucumber_messages_lib
    EXPORT cucumber_messages-targets
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

install(
    EXPORT cucumber_messages-targets
    FILE cucumber_messages-targets.cmake
    NAMESPACE cucumber::
    DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/cucumber_messages"
)

install(
    FILES
        "${PROJECT_BINARY_DIR}/cucumber_messages-config.cmake"
        "${PROJECT_BINARY_DIR}/cucumber_messages-config-version.cmake"
    DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/cucumber_messages"
)

install(
    DIRECTORY "${PROJECT_SOURCE_DIR}/include/generated/"
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/cucumber
)

# Optional: tests
if(CUCUMBER_MESSAGES_BUILD_TESTS)
    include(CTest)
    enable_testing()
    add_subdirectory(test)
endif()
